--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <html>
   <head>
-    <title>rechat</title>
+    <title>Rechat</title>
 
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
+
+    <link rel="stylesheet" media="screen" href="/styles.css">
   </head>
 
   <body>
-    <app id="main">Loading...</app>
+    <app id="main">
+      <spinner>
+        <div></div><div></div><div></div>
+      </spinner>
+    </app>
 
     <script>
       System.import('client').catch(console.log.bind(console));
