feat(theron): sync adding and removing of messages with Theron

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="jspm_packages/system.js"></script>
-    <script src="config.js"></script>
+    <script src="/jspm_packages/system.js"></script>
+    <script src="/config.js"></script>
+    <script src="//cdn.therondb.com/bundles/0.1.0/theron.umd.js"></script>
 
     <link rel="stylesheet" media="screen" href="/styles.css">
   </head>
