--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>Rechat</title>
 
     <base href="/">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="app" content="{{ app }}">
 
     <script src="/jspm_packages/system.js"></script>
     <script src="/config.js"></script>
